# Open-Idempotency-System

./: Cargo.toml  Dockerfile  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: Run-Tests.yml
protos/: idempotency.proto
serverless/az_function/: Readme.md
serverless/az_function/api/: Cargo.toml  host.json
serverless/az_function/api/src/: main.rs
serverless/knative/: Cargo.toml  Procfile  Readme.md
serverless/knative/src/: main.rs
serverless/lambda/: Cargo.toml  Readme.md
serverless/lambda/src/: main.rs
src/: client.rs  docker-compose.yaml  dynamo_DAO.rs  main.rs  proto_bridge.rs  server.rs
src/databases/: IDatabase.rs  cassandra.rs  database.rs  dynamodb.rs  mod.rs  redis.rs  redis_driver.rs
src/databases/config/: IConfig.rs  env_config.rs
src/idempotency_lambda/: Cargo.toml
src/idempotency_lambda/src/: main.rs
terraform/: apigw.tf  dynamodb.tf  lambda.tf  main.tf  vars.tf
terraform/policies/: api-gateway-permission.json
tests/integration_tests/: example.rs
tests/unit_tests/: example.rs
