[package]
name = "open_idempotency"
version = "0.1.0"
edition = "2021"
#build = "build.rs"
[lib]
name = "client"
path = "src/client.rs"

[[bin]]
#name = "idempotency_lambda"
#path = "src/idempotency_lambda/src/main.rs"
name = "force-build"
path = "build.rs"

[lib]
name = "server"
path = "src/server.rs"

# cargo build --bin client_e2e
[[bin]]
name = "client_e2e"
path = "src/bin/client_e2e.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
build_deps = []

[dev-dependencies]
testcontainers = "0.14.0"
assertor = "0.0.1"
pretty_env_logger = "0.4.0"

[dependencies]
async-stream = "0.3.3"
aws-types = "0.52.0"
colored = "2.0.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
crossbeam-queue = "0.3.6"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.1.1"
multiqueue = "0.3.2"
prost = "0.11.0"
pub-sub = "2.0.0"
tokio = { version = "1.21.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net", "signal"] }
tokio-stream = "0.1.9"
tonic = { version = "0.8.1", features = ["tls", "gzip","transport"] }
tonic-health = "0.8.0"
tonic-reflection = "0.6.0"
tonic-build = "0.8.0"
protobuf = "3.2.0"
prost-types = "0.11.1"
simple_logger = "1.13.0"
http = "0.2.5"
chrono = "0.4"
aws-config = "0.52.0"
aws-sdk-dynamodb = "0.22.0"
redis = {version= "0.22.1", features = ["cluster","tokio-comp","connection-manager","ahash"]}
async-trait = "0.1.61"
cassandra-cpp = "1.2.0"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.91"

# For Dynamodb Connection
rusoto = "0.24.2"
rusoto_core = "0.48.0"
rusoto_dynamodb = "0.48.0"
scylla = "0.7.0"
futures-util = "0.3.26"
ctrlc = "3.2.5"

[build-dependencies]
tonic-build = {version= "0.8.0", features = ["prost"]}

